fix formatting and clear notebook

--- a/examples/mixed_logit_comparison_example.ipynb
+++ b/examples/mixed_logit_comparison_example.ipynb
@@ -25,14 +25,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "39a05d62",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "os.chdir(\"/home/evelyn/projects_shared/jaxlogit\")\n",
-    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import jax\n",
@@ -54,9 +51,7 @@
     "logger.setLevel(blog.INFO)\n",
     "\n",
     "#  64bit precision\n",
-    "jax.config.update(\"jax_enable_x64\", True)\n",
-    "\n",
-    "os.chdir(\"/home/evelyn/projects_shared/jaxlogit/examples\")"
+    "jax.config.update(\"jax_enable_x64\", True)"
    ]
   },
   {
@@ -71,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "47fa6cc1",
    "metadata": {},
    "outputs": [],
@@ -91,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "f6b4f249",
    "metadata": {},
    "outputs": [],
@@ -131,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "46257705",
    "metadata": {},
    "outputs": [],
@@ -153,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "535c39c8",
    "metadata": {},
    "outputs": [],
@@ -176,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "b58c4d3a",
    "metadata": {},
    "outputs": [],
@@ -233,51 +228,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "22c1ceff",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "    Message: unknown\n",
-      "    Iterations: 78\n",
-      "    Function evaluations: 94\n",
-      "Estimation time= 33.1 seconds\n",
-      "---------------------------------------------------------------------------\n",
-      "Coefficient              Estimate      Std.Err.         z-val         P>|z|\n",
-      "---------------------------------------------------------------------------\n",
-      "pf                     -0.9760174     1.0000000    -0.9760174         0.329    \n",
-      "cl                     -0.2323658     1.0000000    -0.2323658         0.816    \n",
-      "loc                     2.3265031     1.0000000     2.3265031          0.02 *  \n",
-      "wk                      1.6193361     1.0000000     1.6193361         0.105    \n",
-      "tod                    -9.4457607     1.0000000    -9.4457607       6.3e-21 ***\n",
-      "seas                   -9.4985088     1.0000000    -9.4985088      3.85e-21 ***\n",
-      "sd.pf                  -1.4450517     1.0000000    -1.4450517         0.149    \n",
-      "sd.cl                  -0.6657065     1.0000000    -0.6657065         0.506    \n",
-      "sd.loc                  1.5413155     1.0000000     1.5413155         0.123    \n",
-      "sd.wk                   0.7497444     1.0000000     0.7497444         0.453    \n",
-      "sd.tod                  2.1602660     1.0000000     2.1602660        0.0308 *  \n",
-      "sd.seas                 1.2893880     1.0000000     1.2893880         0.197    \n",
-      "---------------------------------------------------------------------------\n",
-      "Significance:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1\n",
-      "\n",
-      "Log-Likelihood= -3206.713\n",
-      "AIC= 6437.426\n",
-      "BIC= 6511.166\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "None"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "model_jax_scipy = MixedLogit()\n",
     "config = ConfigData(\n",
@@ -302,59 +256,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "fcdec596",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "**** The optimization did not converge after 89 iterations. ****\n",
-      "Convergence not reached. The estimates may not be reliable.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "    Message: saddle point reached\n",
-      "    Iterations: 89\n",
-      "    Function evaluations: 134\n",
-      "Estimation time= 22.2 seconds\n",
-      "---------------------------------------------------------------------------\n",
-      "Coefficient              Estimate      Std.Err.         z-val         P>|z|\n",
-      "---------------------------------------------------------------------------\n",
-      "pf                     -0.9760555     1.0000000    -0.9760555         0.329    \n",
-      "cl                     -0.2323721     1.0000000    -0.2323721         0.816    \n",
-      "loc                     2.3266198     1.0000000     2.3266198          0.02 *  \n",
-      "wk                      1.6194020     1.0000000     1.6194020         0.105    \n",
-      "tod                    -9.4461198     1.0000000    -9.4461198      6.28e-21 ***\n",
-      "seas                   -9.4988576     1.0000000    -9.4988576      3.84e-21 ***\n",
-      "sd.pf                  -1.4450489     1.0000000    -1.4450489         0.149    \n",
-      "sd.cl                  -0.6656618     1.0000000    -0.6656618         0.506    \n",
-      "sd.loc                  1.5413221     1.0000000     1.5413221         0.123    \n",
-      "sd.wk                   0.7498061     1.0000000     0.7498061         0.453    \n",
-      "sd.tod                  2.1603069     1.0000000     2.1603069        0.0308 *  \n",
-      "sd.seas                 1.2894950     1.0000000     1.2894950         0.197    \n",
-      "---------------------------------------------------------------------------\n",
-      "Significance:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1\n",
-      "\n",
-      "Log-Likelihood= -3206.713\n",
-      "AIC= 6437.426\n",
-      "BIC= 6511.166\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "None"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "model_jax = MixedLogit()\n",
     "config = ConfigData(\n",
@@ -387,52 +292,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "e89a636c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Optimization terminated successfully.\n",
-      "    Message: CONVERGENCE: RELATIVE REDUCTION OF F <= FACTR*EPSMCH\n",
-      "    Iterations: 69\n",
-      "    Function evaluations: 80\n",
-      "Estimation time= 18.6 seconds\n",
-      "---------------------------------------------------------------------------\n",
-      "Coefficient              Estimate      Std.Err.         z-val         P>|z|\n",
-      "---------------------------------------------------------------------------\n",
-      "pf                     -0.9763775     1.0000000    -0.9763775         0.329    \n",
-      "cl                     -0.2421489     1.0000000    -0.2421489         0.809    \n",
-      "loc                     2.3592633     1.0000000     2.3592633        0.0184 *  \n",
-      "wk                      1.6141594     1.0000000     1.6141594         0.107    \n",
-      "tod                    -9.3777590     1.0000000    -9.3777590      1.18e-20 ***\n",
-      "seas                   -9.5553550     1.0000000    -9.5553550      2.26e-21 ***\n",
-      "sd.pf                  -0.2179004     1.0000000    -0.2179004         0.828    \n",
-      "sd.cl                   0.4063359     1.0000000     0.4063359         0.685    \n",
-      "sd.loc                  1.7257543     1.0000000     1.7257543        0.0845 .  \n",
-      "sd.wk                   1.1184745     1.0000000     1.1184745         0.263    \n",
-      "sd.tod                  2.3922350     1.0000000     2.3922350        0.0168 *  \n",
-      "sd.seas                 1.6382757     1.0000000     1.6382757         0.101    \n",
-      "---------------------------------------------------------------------------\n",
-      "Significance:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1\n",
-      "\n",
-      "Log-Likelihood= -3206.031\n",
-      "AIC= 6436.062\n",
-      "BIC= 6509.801\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "None"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "model_x.fit(\n",
     "    X=X_train,\n",
@@ -461,36 +324,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "1d0fe20c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "The number of draws (600) is low. The results may not be meaningful. \n",
-      "The number of draws (600) is low. The results may not be meaningful. \n",
-      "The number of draws (600) is low. The results may not be meaningful. \n",
-      "The number of draws (600) is low. The results may not be meaningful. \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Results for model model_b\n",
-      "Nbr of parameters:\t\t12\n",
-      "Sample size:\t\t\t361\n",
-      "Observations:\t\t\t3446\n",
-      "Excluded data:\t\t\t0\n",
-      "Final log likelihood:\t\t-3205.346\n",
-      "Akaike Information Criterion:\t6434.692\n",
-      "Bayesian Information Criterion:\t6481.358\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "prob = models.logit(V, None, choice)\n",
     "logprob = log(MonteCarlo(PanelLikelihoodTrajectory(prob)))\n",
@@ -516,33 +353,12 @@
    "execution_count": null,
    "id": "ca1a3992",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "     Estimate Jaxlogit-scipy  Jaxlogit-jax        xlogit       biogeme\n",
-      "----------------------------------------------------------\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'RawEstimationResults' object has no attribute 'data'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[29]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      2\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33m-\u001b[39m\u001b[33m\"\u001b[39m * \u001b[32m58\u001b[39m)\n\u001b[32m      3\u001b[39m fmt = \u001b[33m\"\u001b[39m\u001b[38;5;132;01m{:13}\u001b[39;00m\u001b[33m \u001b[39m\u001b[38;5;132;01m{:13.7f}\u001b[39;00m\u001b[33m \u001b[39m\u001b[38;5;132;01m{:13.7f}\u001b[39;00m\u001b[33m \u001b[39m\u001b[38;5;132;01m{:13.7f}\u001b[39;00m\u001b[33m \u001b[39m\u001b[38;5;132;01m{:13.7f}\u001b[39;00m\u001b[33m\"\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m biogeme_values = \u001b[43mresults\u001b[49m\u001b[43m.\u001b[49m\u001b[43mdata\u001b[49m.getBetaValues()\n\u001b[32m      5\u001b[39m coeff_names = {\u001b[33m'\u001b[39m\u001b[33mpf\u001b[39m\u001b[33m'\u001b[39m: \u001b[33m'\u001b[39m\u001b[33mpf_mean\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33msd.pf\u001b[39m\u001b[33m'\u001b[39m: \u001b[33m'\u001b[39m\u001b[33mpf_sd\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mcl\u001b[39m\u001b[33m'\u001b[39m: \u001b[33m'\u001b[39m\u001b[33mcl_mean\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33msd.cl\u001b[39m\u001b[33m'\u001b[39m: \u001b[33m'\u001b[39m\u001b[33mcl_sd\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mloc\u001b[39m\u001b[33m'\u001b[39m: \u001b[33m'\u001b[39m\u001b[33mloc_mean\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33msd.loc\u001b[39m\u001b[33m'\u001b[39m: \u001b[33m'\u001b[39m\u001b[33mloc_sd\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mwk\u001b[39m\u001b[33m'\u001b[39m: \u001b[33m'\u001b[39m\u001b[33mwk_mean\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33msd.wk\u001b[39m\u001b[33m'\u001b[39m: \u001b[33m'\u001b[39m\u001b[33mwk_sd\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mtod\u001b[39m\u001b[33m'\u001b[39m: \u001b[33m'\u001b[39m\u001b[33mtod_mean\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33msd.tod\u001b[39m\u001b[33m'\u001b[39m: \u001b[33m'\u001b[39m\u001b[33mtod_sd\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mseas\u001b[39m\u001b[33m'\u001b[39m: \u001b[33m'\u001b[39m\u001b[33mseas_mean\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33msd.seas\u001b[39m\u001b[33m'\u001b[39m: \u001b[33m'\u001b[39m\u001b[33mseas_sd\u001b[39m\u001b[33m'\u001b[39m}\n\u001b[32m      6\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(model_jax.coeff_)):\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/projects_shared/jaxlogit/venv/lib/python3.12/site-packages/biogeme/results_processing/estimation_results.py:139\u001b[39m, in \u001b[36mEstimationResults.__getattr__\u001b[39m\u001b[34m(self, name)\u001b[39m\n\u001b[32m    134\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m (\n\u001b[32m    135\u001b[39m     \u001b[33m'\u001b[39m\u001b[33mraw_estimation_results\u001b[39m\u001b[33m'\u001b[39m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m.\u001b[34m__dict__\u001b[39m\n\u001b[32m    136\u001b[39m     \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m.\u001b[34m__dict__\u001b[39m[\u001b[33m'\u001b[39m\u001b[33mraw_estimation_results\u001b[39m\u001b[33m'\u001b[39m] \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[32m    137\u001b[39m ):\n\u001b[32m    138\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m BiogemeError(\u001b[33mf\u001b[39m\u001b[33m'\u001b[39m\u001b[33mImpossible to obtain \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mname\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m. No result available.\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m--> \u001b[39m\u001b[32m139\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mgetattr\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mraw_estimation_results\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mname\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[31mAttributeError\u001b[39m: 'RawEstimationResults' object has no attribute 'data'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(\"{:>13} {:>13} {:>13} {:>13} {:>13}\".format(\"Estimate\", \"Jaxlogit-scipy\", \"Jaxlogit-jax\", \"xlogit\", \"biogeme\"))\n",
-    "print(\"-\" * 58)\n",
-    "fmt = \"{:13} {:13.7f} {:13.7f} {:13.7f} {:13.7f}\"\n",
-    "biogeme_values = results.getBetaValues()\n",
+    "print(\"{:>9} {:>20} {:>15} {:>13} {:>13}\".format(\"Estimate\", \"Jaxlogit-scipy\", \"Jaxlogit-jax\", \"Xlogit\", \"Biogeme\"))\n",
+    "print(\"-\" * 76)\n",
+    "fmt = \"{:9} {:18.7f} {:16.7f} {:15.7f} {:13.7f}\"\n",
+    "biogeme_values = results.get_beta_values()\n",
     "coeff_names = {'pf': 'pf_mean', 'sd.pf': 'pf_sd', 'cl': 'cl_mean', 'sd.cl': 'cl_sd', 'loc': 'loc_mean', 'sd.loc': 'loc_sd', 'wk': 'wk_mean', 'sd.wk': 'wk_sd', 'tod': 'tod_mean', 'sd.tod': 'tod_sd', 'seas': 'seas_mean', 'sd.seas': 'seas_sd'}\n",
     "for i in range(len(model_jax.coeff_)):\n",
     "    name = model_jax.coeff_names[i]\n",
@@ -551,7 +367,7 @@
     "                     model_jax.coeff_[i], \n",
     "                     model_x.coeff_[i],\n",
     "                     biogeme_values[coeff_names[name]]))\n",
-    "print(\"-\" * 58)"
+    "print(\"-\" * 76)"
    ]
   },
   {
@@ -565,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "40aadb5f",
    "metadata": {},
    "outputs": [],
@@ -584,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "33951641",
    "metadata": {},
    "outputs": [],
@@ -611,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "32e13c4d",
    "metadata": {},
    "outputs": [],
@@ -629,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "eecf3cbd",
    "metadata": {},
    "outputs": [],
@@ -660,21 +476,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "49d1f064",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Jaxlogit-scipy Jaxlogit-jax    xlogit   Biogeme\n",
-      "-------------------------------\n",
-      " 0.624247  0.624248  0.624570  0.624163\n",
-      "-------------------------------\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"{:>9} {:>9} {:>9} {:>9}\".format(\"Jaxlogit-scipy\", \"Jaxlogit-jax\", \"xlogit\", \"Biogeme\"))\n",
     "print(\"-\" * 31)\n",
