--- a/examples/batching_example.ipynb
+++ b/examples/batching_example.ipynb
@@ -13,7 +13,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -23,20 +23,16 @@
       },
       "outputs": [],
       "source": [
-        "import os\n",
-        "os.chdir(\"/home/evelyn/projects_shared/jaxlogit\")\n",
-        "\n",
         "import pandas as pd\n",
         "import numpy as np\n",
         "import jax\n",
         "\n",
-        "from jaxlogit.mixed_logit import MixedLogit, ConfigData\n",
-        "os.chdir(\"/home/evelyn/projects_shared/jaxlogit/examples\")"
+        "from jaxlogit.mixed_logit import MixedLogit, ConfigData"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -55,7 +51,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -64,17 +60,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Data has 4308 observations, we use 6 random variables in the model. We work in 64 bit precision, so each element is 8 bytes. For 1000 draws, the array of draws is about 0.19 GB.\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "n_obs = df['chid'].unique().shape[0]\n",
         "n_vars = 6\n",
@@ -92,57 +80,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "WARNING:2026-01-22 10:36:26,401:jax._src.xla_bridge:854: An NVIDIA GPU may be present on this machine, but a CUDA-enabled jaxlib is not installed. Falling back to cpu.\n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "    Message: unknown\n",
-            "    Iterations: 70\n",
-            "    Function evaluations: 78\n",
-            "Estimation time= 53.4 seconds\n",
-            "---------------------------------------------------------------------------\n",
-            "Coefficient              Estimate      Std.Err.         z-val         P>|z|\n",
-            "---------------------------------------------------------------------------\n",
-            "pf                     -1.0206555     1.0000000    -1.0206555         0.307    \n",
-            "cl                     -0.2446836     1.0000000    -0.2446836         0.807    \n",
-            "loc                     2.3320637     1.0000000     2.3320637        0.0197 *  \n",
-            "wk                      1.6238631     1.0000000     1.6238631         0.104    \n",
-            "tod                    -9.7212850     1.0000000    -9.7212850      4.12e-22 ***\n",
-            "seas                   -9.6267158     1.0000000    -9.6267158      1.02e-21 ***\n",
-            "sd.pf                  -1.2174305     1.0000000    -1.2174305         0.224    \n",
-            "sd.cl                  -0.7125495     1.0000000    -0.7125495         0.476    \n",
-            "sd.loc                  1.7113082     1.0000000     1.7113082        0.0871 .  \n",
-            "sd.wk                   0.8960280     1.0000000     0.8960280          0.37    \n",
-            "sd.tod                  2.4364222     1.0000000     2.4364222        0.0149 *  \n",
-            "sd.seas               -28.5934756     1.0000000   -28.5934756     8.41e-165 ***\n",
-            "---------------------------------------------------------------------------\n",
-            "Significance:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1\n",
-            "\n",
-            "Log-Likelihood= -3904.059\n",
-            "AIC= 7832.118\n",
-            "BIC= 7908.536\n"
-          ]
-        },
-        {
-          "data": {
-            "text/plain": [
-              "None"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        }
-      ],
+      "outputs": [],
       "source": [
         "model = MixedLogit()\n",
         "\n",
@@ -151,7 +91,7 @@
         "    n_draws=1000,\n",
         "    skip_std_errs=True,  # skip standard errors to speed up the example\n",
         "    batch_size=None,\n",
-        "    optim_method=\"BFGS-scipy\",\n",
+        "    optim_method=\"L-BFGS-B-scipy\",\n",
         "    maxiter=100,\n",
         ")\n",
         "\n",
@@ -171,56 +111,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "WARNING:2026-01-23 10:24:42,201:jax._src.xla_bridge:854: An NVIDIA GPU may be present on this machine, but a CUDA-enabled jaxlib is not installed. Falling back to cpu.\n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Optimization terminated successfully.\n",
-            "    Message: unknown\n",
-            "    Iterations: 70\n",
-            "    Function evaluations: 78\n",
-            "Estimation time= 61.2 seconds\n",
-            "---------------------------------------------------------------------------\n",
-            "Coefficient              Estimate      Std.Err.         z-val         P>|z|\n",
-            "---------------------------------------------------------------------------\n",
-            "pf                     -1.0206555     1.0000000    -1.0206555         0.307    \n",
-            "cl                     -0.2446836     1.0000000    -0.2446836         0.807    \n",
-            "loc                     2.3320637     1.0000000     2.3320637        0.0197 *  \n",
-            "wk                      1.6238631     1.0000000     1.6238631         0.104    \n",
-            "tod                    -9.7212850     1.0000000    -9.7212850      4.12e-22 ***\n",
-            "seas                   -9.6267158     1.0000000    -9.6267158      1.02e-21 ***\n",
-            "sd.pf                  -1.2174305     1.0000000    -1.2174305         0.224    \n",
-            "sd.cl                  -0.7125495     1.0000000    -0.7125495         0.476    \n",
-            "sd.loc                  1.7113082     1.0000000     1.7113082        0.0871 .  \n",
-            "sd.wk                   0.8960280     1.0000000     0.8960280          0.37    \n",
-            "sd.tod                  2.4364222     1.0000000     2.4364222        0.0149 *  \n",
-            "sd.seas               -28.5934756     1.0000000   -28.5934756     8.41e-165 ***\n",
-            "---------------------------------------------------------------------------\n",
-            "Significance:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1\n",
-            "\n",
-            "Log-Likelihood= -3904.059\n",
-            "AIC= 7832.118\n",
-            "BIC= 7908.536\n"
-          ]
-        },
-        {
-          "data": {
-            "text/plain": [
-              "None"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        }
-      ],
+      "outputs": [],
       "source": [
         "model = MixedLogit()\n",
         "\n",
@@ -228,8 +119,8 @@
         "    panels=df['id'],\n",
         "    n_draws=n_draws,\n",
         "    # skip_std_errs=True,  # skip standard errors to speed up the example\n",
-        "    batch_size=539,  # should result in 4 batches\n",
-        "    optim_method=\"BFGS-scipy\",\n",
+        "    batch_size=1077,  # should result in 4 batches\n",
+        "    optim_method=\"L-BFGS-B-scipy\",\n",
         ")\n",
         "\n",
         "res = model.fit(\n",
@@ -256,7 +147,7 @@
         "    panels=df['id'],\n",
         "    n_draws=n_draws,\n",
         "    skip_std_errs=True,  # skip standard errors to speed up the example\n",
-        "    optim_method=\"L-BFGS-B\",\n",
+        "    optim_method=\"L-BFGS-B-scipy\",\n",
         "    batch_size=539,\n",
         ")\n",
         "\n",
@@ -271,13 +162,6 @@
         ")\n",
         "display(model.summary())"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
     }
   ],
   "metadata": {
