--- a/examples/swissmetro_biogeme.ipynb
+++ b/examples/swissmetro_biogeme.ipynb
@@ -344,7 +344,7 @@
     "    fixedvars=fixedvars,\n",
     "    init_coeff=None,\n",
     "    include_correlations=False,\n",
-    "    optim_method='trust-region',\n",
+    "    optim_method='L-BFGS-jax',\n",
     "    skip_std_errs=False,\n",
     "    force_positive_chol_diag=False,  # not using softplus for std devs here for comparability with biogeme\n",
     ")\n",
@@ -372,7 +372,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv (3.10.12)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -386,7 +386,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
