tidy up comparison graphs

--- a/examples/graphs/comparison_graphs_memory.ipynb
+++ b/examples/graphs/comparison_graphs_memory.ipynb
@@ -30,9 +30,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "os.chdir(\"/home/evelyn/projects_shared/jaxlogit\")\n",
-    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import jax\n",
@@ -53,9 +50,7 @@
     "logger.setLevel(blog.INFO)\n",
     "\n",
     "#  64bit precision\n",
-    "jax.config.update(\"jax_enable_x64\", True)\n",
-    "\n",
-    "os.chdir(\"/home/evelyn/projects_shared/jaxlogit/examples/graphs\")"
+    "jax.config.update(\"jax_enable_x64\", True)"
    ]
   },
   {
@@ -273,7 +268,7 @@
    "outputs": [],
    "source": [
     "mem_usage_x = memory_usage((model_x.fit, (df[varnames], df['choice'], varnames, df['alt'], df['chid'], randvars), \n",
-    "                          {\"panels\": df['id'], \"n_draws\": 5000, \"skip_std_errs\": True, \"batch_size\": None, \"optim_method\": \"L-BFGS-B\"},), interval=5.0, multiprocess=True)"
+    "                          {\"panels\": df['id'], \"n_draws\": 1000, \"skip_std_errs\": True, \"batch_size\": None, \"optim_method\": \"L-BFGS-B\"},), interval=5.0, multiprocess=True)"
    ]
   },
   {
@@ -293,7 +288,31 @@
     "    the_biogeme.model_name = 'model_b'\n",
     "    results = the_biogeme.estimate()\n",
     "\n",
-    "mem_usage_biogeme = memory_usage((biogeme_running, (V, choice)), interval=5.0, multiprocess=True)"
+    "mem_usage_biogeme = memory_usage((biogeme_running, (V, choice)), interval=1.0, multiprocess=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c53f5a59",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
+    "# Dump all of rdf_fit\n",
+    "list = rdf_fit.values.tolist()\n",
+    "with open(\"comparison_data_fit.json\", \"w\") as f:\n",
+    "    json.dump(list, f)\n",
+    "\n",
+    "# Retrieve all of rdf_fit\n",
+    "# with open(\"comparison_data_fit.json\", \"r\") as f:\n",
+    "#     fit_data = json.load(f)\n",
+    "# rdf = pd.DataFrame(fit_data)\n",
+    "# rdf.columns = [\"package\", \"draws\", \"time\"]\n",
+    "# rdf = pd.concat([rdf, rdf_fit], ignore_index=True)\n",
+    "\n",
+    "# # print(rdf_fit)"
    ]
   },
   {
@@ -305,11 +324,7 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# plt.plot(mem_usage_j, label=\"Memory usage by jaxlogit BFGS\")\n",
-    "# plt.plot(mem_usage_j_l, label=\"Memory usage by jaxlogit L-BFGS\")\n",
     "plt.plot(mem_usage_x, label=\"Memory usage by xlogit\")\n",
-    "# plt.plot(mem_usage_medium_batch, label=\"Memory usage by jaxlogit BFGS using batches\")\n",
-    "# plt.plot(mem_usage_medium_batch_l, label=\"Memory usage by jaxlogit L-BFGS using batches\")\n",
     "plt.plot(mem_usage_biogeme, label=\"Memory usage by biogeme\")\n",
     "for (name, plot) in jaxlogit_mem:\n",
     "    plt.plot(plot, label=\"name\")\n",
