make memory graph code more consistent and use the right graphs in the readme

--- a/examples/graphs/comparison_graphs_memory.ipynb
+++ b/examples/graphs/comparison_graphs_memory.ipynb
@@ -70,21 +70,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "varnames = ['pf', 'cl', 'loc', 'wk', 'tod', 'seas']\n",
-    "n_draws = 600\n",
-    "quick_draws_biogeme = [100, 200, 300, 400, 500, 600]\n",
-    "quick_draws_extended = [700, 800, 900, 1000, 1500, 2000, 2500, 3000, 4000, 5000]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "62cda8c7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rdf_fit = pd.DataFrame(columns=[\"package\", \"draws\", \"time\"])\n",
-    "rdf_predict = pd.DataFrame(columns=[\"package\", \"time\"])"
+    "varnames = ['pf', 'cl', 'loc', 'wk', 'tod', 'seas']"
    ]
   },
   {
@@ -140,7 +126,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from memory_profiler import memory_usage"
+    "from memory_profiler import memory_usage\n",
+    "\n",
+    "rdf_fit = pd.DataFrame(columns=[\"package\", \"memory\"])"
    ]
   },
   {
@@ -212,9 +200,7 @@
     "combos = [('jaxlogit_scipy', \"L-BFGS-B-scipy\"), ('jaxlogit_scipy_b', \"BFGS-scipy\"), ('jaxlogit_jax', \"L-BFGS-jax\"),\n",
     "          ('jaxlogit_optax', 'L-BFGS-optax')]\n",
     "# no jax scipy batching, because it does not work.\n",
-    "combos_batched = [('jaxlogit_scipy_batched', \"L-BFGS-scipy\"), ('jaxlogit_scipy_b_batched', \"BFGS-scipy\")]\n",
-    "\n",
-    "jaxlogit_mem = []"
+    "combos_batched = [('jaxlogit_scipy_batched', \"L-BFGS-scipy\"), ('jaxlogit_scipy_b_batched', \"BFGS-scipy\")]"
    ]
   },
   {
@@ -236,7 +222,7 @@
     "    )\n",
     "\n",
     "    mem = memory_usage((model_jax.fit, (df[varnames], df['choice'], varnames, df['alt'], df['chid'], randvars, config)), interval=5.0, multiprocess=True)\n",
-    "    jaxlogit_mem.append((name, mem))"
+    "    rdf_fit.loc[len(rdf_fit)] = [name, mem]"
    ]
   },
   {
@@ -257,7 +243,7 @@
     "    )\n",
     "\n",
     "    mem = memory_usage((model_jax.fit, (df[varnames], df['choice'], varnames, df['alt'], df['chid'], randvars, config)), interval=5.0, multiprocess=True)\n",
-    "    jaxlogit_mem.append((name, mem))"
+    "    rdf_fit.loc[len(rdf_fit)] = [name, mem]"
    ]
   },
   {
@@ -268,7 +254,8 @@
    "outputs": [],
    "source": [
     "mem_usage_x = memory_usage((model_x.fit, (df[varnames], df['choice'], varnames, df['alt'], df['chid'], randvars), \n",
-    "                          {\"panels\": df['id'], \"n_draws\": 1000, \"skip_std_errs\": True, \"batch_size\": None, \"optim_method\": \"L-BFGS-B\"},), interval=5.0, multiprocess=True)"
+    "                          {\"panels\": df['id'], \"n_draws\": 1000, \"skip_std_errs\": True, \"batch_size\": None, \"optim_method\": \"L-BFGS-B\"},), interval=5.0, multiprocess=True)\n",
+    "rdf_fit.loc[len(rdf_fit)] = [\"xlogit\", mem_usage_x]"
    ]
   },
   {
@@ -288,7 +275,8 @@
     "    the_biogeme.model_name = 'model_b'\n",
     "    results = the_biogeme.estimate()\n",
     "\n",
-    "mem_usage_biogeme = memory_usage((biogeme_running, (V, choice)), interval=1.0, multiprocess=True)"
+    "mem_usage_biogeme = memory_usage((biogeme_running, (V, choice)), interval=1.0, multiprocess=True)\n",
+    "rdf_fit.loc[len(rdf_fit)] = [\"biogeme\", mem_usage_biogeme]"
    ]
   },
   {
@@ -302,7 +290,7 @@
     "\n",
     "# Dump all of rdf_fit\n",
     "list = rdf_fit.values.tolist()\n",
-    "with open(\"comparison_data_fit.json\", \"w\") as f:\n",
+    "with open(\"comparison_data_mem.json\", \"w\") as f:\n",
     "    json.dump(list, f)\n",
     "\n",
     "# Retrieve all of rdf_fit\n",
@@ -324,10 +312,8 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "plt.plot(mem_usage_x, label=\"Memory usage by xlogit\")\n",
-    "plt.plot(mem_usage_biogeme, label=\"Memory usage by biogeme\")\n",
-    "for (name, plot) in jaxlogit_mem:\n",
-    "    plt.plot(plot, label=\"name\")\n",
+    "for (name, mem) in rdf_fit:\n",
+    "    plt.plot(mem, label=name)\n",
     "plt.xlim(left=0)\n",
     "plt.xlabel(\"Time (samples)\")\n",
     "plt.ylabel(\"Memory (MB)\")\n",
@@ -335,9 +321,7 @@
     "plt.legend()\n",
     "plt.grid(True)\n",
     "plt.savefig(\"memory_comparison\")\n",
-    "plt.show()\n",
-    "\n",
-    "# no jit usage here"
+    "plt.show()"
    ]
   }
  ],
