--- a/examples/graphs/comparison_graphs_timing.ipynb
+++ b/examples/graphs/comparison_graphs_timing.ipynb
@@ -422,16 +422,7 @@
     "    plt.show()\n",
     "    plt.close()\n",
     "\n",
-    "plot(rdf_fit, \"fit_estimation_time\")\n",
-    "\n",
-    "# def bar(df, name):\n",
-    "#     plt.bar(libs, df[\"time\"], color=colors.values())\n",
-    "#     plt.xlabel(\"Package\")\n",
-    "#     plt.ylabel(\"Time (Seconds)\")\n",
-    "#     plt.title(\"Predict time\")\n",
-    "#     plt.savefig(name)\n",
-    "\n",
-    "# bar(rdf_predict, \"predict_time\")"
+    "plot(rdf_fit, \"fit_estimation_time\")"
    ]
   }
  ],
