--- a/examples/batching_example.ipynb
+++ b/examples/batching_example.ipynb
@@ -75,16 +75,7 @@
         "    + f\" For {n_draws} draws, the array of draws is about {size_in_ram:.2f} GB.\"\n",
         ")\n",
         "\n",
-        "varnames = ['pf', 'cl', 'loc', 'wk', 'tod', 'seas']"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "model = MixedLogit()\n",
+        "varnames = ['pf', 'cl', 'loc', 'wk', 'tod', 'seas']\n",
         "\n",
         "config = ConfigData(\n",
         "    panels=df['id'],\n",
@@ -92,7 +83,16 @@
         "    skip_std_errs=True,  # skip standard errors to speed up the example\n",
         "    batch_size=None,\n",
         "    optim_method=\"L-BFGS-B\",\n",
-        ")\n",
+        ")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "model = MixedLogit()\n",
         "\n",
         "res = model.fit(\n",
         "    X=df[varnames],\n",
@@ -114,13 +114,8 @@
       "source": [
         "model = MixedLogit()\n",
         "\n",
-        "config = ConfigData(\n",
-        "    panels=df['id'],\n",
-        "    n_draws=n_draws,\n",
-        "    skip_std_errs=True,  # skip standard errors to speed up the example\n",
-        "    batch_size=1077,  # should result in 4 batches\n",
-        "    optim_method=\"L-BFGS-B\",  # \"L-BFGS-B\", \"BFGS\"lver\n",
-        ")\n",
+        "config.batch_size = 1077 # should result in 4 batches\n",
+        "config.init_coeff =  # prevent model from starting at the previously calculated answer\n",
         "\n",
         "res = model.fit(\n",
         "    X=df[varnames],\n",
@@ -142,13 +137,8 @@
       "source": [
         "model = MixedLogit()\n",
         "\n",
-        "config = ConfigData(\n",
-        "    panels=df['id'],\n",
-        "    n_draws=n_draws,\n",
-        "    skip_std_errs=True,  # skip standard errors to speed up the example\n",
-        "    optim_method=\"L-BFGS-B\",\n",
-        "    batch_size=539,\n",
-        ")\n",
+        "config.batch_size = 539\n",
+        "config.init_coeff =  # prevent model from starting at the previously calculated answer\n",
         "\n",
         "res = model.fit(\n",
         "    X=df[varnames],\n",
@@ -161,13 +151,6 @@
         ")\n",
         "display(model.summary())"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
     }
   ],
   "metadata": {
@@ -178,7 +161,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "venv (3.10.12)",
+      "display_name": "venv",
       "language": "python",
       "name": "python3"
     },
@@ -192,7 +175,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.12"
+      "version": "3.12.3"
     }
   },
   "nbformat": 4,
