--- a/examples/batching_example.ipynb
+++ b/examples/batching_example.ipynb
@@ -115,7 +115,7 @@
         "model = MixedLogit()\n",
         "\n",
         "config.batch_size = 1077 # should result in 4 batches\n",
-        "config.init_coeff =  # prevent model from starting at the previously calculated answer\n",
+        "config.init_coeff =  None # prevent model from starting at the previously calculated answer\n",
         "\n",
         "res = model.fit(\n",
         "    X=df[varnames],\n",
@@ -138,7 +138,7 @@
         "model = MixedLogit()\n",
         "\n",
         "config.batch_size = 539\n",
-        "config.init_coeff =  # prevent model from starting at the previously calculated answer\n",
+        "config.init_coeff =  None # prevent model from starting at the previously calculated answer\n",
         "\n",
         "res = model.fit(\n",
         "    X=df[varnames],\n",
