--- a/examples/graphs/comparison_graphs_timing.ipynb
+++ b/examples/graphs/comparison_graphs_timing.ipynb
@@ -319,7 +319,7 @@
     "        n_draws=draw,\n",
     "        skip_std_errs=True,  # skip standard errors to speed up the example\n",
     "        batch_size=None,\n",
-    "        optim_method=\"L-BFGS-B-scipy\",\n",
+    "        optim_method=\"L-BFGS-B\",\n",
     "    )\n",
     "    ellapsed = time() - start_time\n",
     "    rdf_fit.loc[len(rdf_fit)] = ['xlogit', draw, ellapsed]\n",
