--- a/examples/graphs/comparison_graphs_timing.ipynb
+++ b/examples/graphs/comparison_graphs_timing.ipynb
@@ -25,11 +25,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "39a05d62",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "os.chdir(\"/home/evelyn/projects_shared/jaxlogit\")\n",
+    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import jax\n",
@@ -50,7 +53,9 @@
     "logger.setLevel(blog.INFO)\n",
     "\n",
     "#  64bit precision\n",
-    "jax.config.update(\"jax_enable_x64\", True)"
+    "jax.config.update(\"jax_enable_x64\", True)\n",
+    "\n",
+    "os.chdir(\"/home/evelyn/projects_shared/jaxlogit/examples/graphs\")"
    ]
   },
   {
@@ -366,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "fe2b7b79",
    "metadata": {},
    "outputs": [],
@@ -376,31 +381,52 @@
     "matplotlib.rcParams.update({'font.size': 14,\n",
     "                            'axes.spines.right': False,\n",
     "                            'axes.spines.top': False})\n",
-    "libs = ['jaxlogit_scipy', 'jaxlogit_scipy_b', 'jaxlogit_jax', 'jaxlogit_jax_b','xlogit', 'biogeme']"
+    "libs = ['jaxlogit_scipy', 'jaxlogit_scipy_b', 'jaxlogit_jax', 'jaxlogit_jax_b', 'jaxlogit_scipy_batched', 'jaxlogit_scipy_b_batched', 'xlogit', 'biogeme']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "f9a04a9d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            package  draws        time\n",
+      "0    jaxlogit_scipy    100    7.606610\n",
+      "1    jaxlogit_scipy    200   10.792940\n",
+      "2    jaxlogit_scipy    400   14.242914\n",
+      "3    jaxlogit_scipy    500   19.262926\n",
+      "4    jaxlogit_scipy    600   22.860441\n",
+      "..              ...    ...         ...\n",
+      "105         biogeme    100  153.660316\n",
+      "106         biogeme    200  181.695228\n",
+      "107         biogeme    400  209.201358\n",
+      "108         biogeme    500  224.235153\n",
+      "109         biogeme    600  247.105477\n",
+      "\n",
+      "[110 rows x 3 columns]\n"
+     ]
+    }
+   ],
    "source": [
     "import json\n",
     "\n",
-    "# Dump all of rdf_fit\n",
-    "list = rdf_fit.values.tolist()\n",
-    "with open(\"comparison_data_fit.json\", \"w\") as f:\n",
-    "    json.dump(list, f)\n",
+    "# # Dump all of rdf_fit\n",
+    "# list = rdf_fit.values.tolist()\n",
+    "# with open(\"comparison_data_timing.json\", \"w\") as f:\n",
+    "#     json.dump(list, f)\n",
     "\n",
     "# Retrieve all of rdf_fit\n",
-    "# with open(\"comparison_data_fit.json\", \"r\") as f:\n",
-    "#     fit_data = json.load(f)\n",
-    "# rdf = pd.DataFrame(fit_data)\n",
-    "# rdf.columns = [\"package\", \"draws\", \"time\"]\n",
+    "with open(\"comparison_data_timing.json\", \"r\") as f:\n",
+    "    fit_data = json.load(f)\n",
+    "rdf = pd.DataFrame(fit_data)\n",
+    "rdf.columns = [\"package\", \"draws\", \"time\"]\n",
     "# rdf = pd.concat([rdf, rdf_fit], ignore_index=True)\n",
     "\n",
-    "# # print(rdf_fit)"
+    "print(rdf)"
    ]
   },
   {
@@ -408,7 +434,19 @@
    "execution_count": null,
    "id": "172178b1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'rdf_fit' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[8]\u001b[39m\u001b[32m, line 13\u001b[39m\n\u001b[32m     10\u001b[39m     plt.show()\n\u001b[32m     11\u001b[39m     plt.close()\n\u001b[32m---> \u001b[39m\u001b[32m13\u001b[39m plot(\u001b[43mrdf_fit\u001b[49m, \u001b[33m\"\u001b[39m\u001b[33mfit_estimation_time\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[31mNameError\u001b[39m: name 'rdf_fit' is not defined"
+     ]
+    }
+   ],
    "source": [
     "def plot(df, name):\n",
     "    for lib in libs:\n",
@@ -422,7 +460,7 @@
     "    plt.show()\n",
     "    plt.close()\n",
     "\n",
-    "plot(rdf_fit, \"fit_estimation_time\")"
+    "plot(rdf, \"fit_estimation_time\")"
    ]
   }
  ],
