save legend in the figure

--- a/examples/graphs/comparison_graphs_memory.ipynb
+++ b/examples/graphs/comparison_graphs_memory.ipynb
@@ -320,7 +320,7 @@
     "plt.title(\"Memory Usage Over Time\")\n",
     "plt.legend()\n",
     "plt.grid(True)\n",
-    "plt.savefig(\"memory_comparison\")\n",
+    "plt.savefig(\"memory_comparison\", bbox_inches=\"tight\")\n",
     "plt.show()"
    ]
   }
