--- a/examples/graphs/comparison_graphs_timing.ipynb
+++ b/examples/graphs/comparison_graphs_timing.ipynb
@@ -30,9 +30,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "os.chdir(\"/home/evelyn/projects_shared/jaxlogit\")\n",
-    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import jax\n",
@@ -53,9 +50,7 @@
     "logger.setLevel(blog.INFO)\n",
     "\n",
     "#  64bit precision\n",
-    "jax.config.update(\"jax_enable_x64\", True)\n",
-    "\n",
-    "os.chdir(\"/home/evelyn/projects_shared/jaxlogit/examples/graphs\")"
+    "jax.config.update(\"jax_enable_x64\", True)"
    ]
   },
   {
@@ -423,7 +418,7 @@
     "    plt.xlabel(\"Random draws\")\n",
     "    plt.ylabel(\"Time (Seconds)\")\n",
     "    plt.title(\"Estimation time\")\n",
-    "    plt.savefig(name)\n",
+    "    plt.savefig(name, bbox_inches=\"tight\")\n",
     "    plt.show()\n",
     "    plt.close()\n",
     "\n",
