--- a/examples/graphs/comparison_graphs_memory.ipynb
+++ b/examples/graphs/comparison_graphs_memory.ipynb
@@ -197,8 +197,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "combos = [('jaxlogit_scipy', \"L-BFGS-B-scipy\"), ('jaxlogit_scipy_b', \"BFGS-scipy\"), ('jaxlogit_jax', \"L-BFGS-jax\"),\n",
-    "          ('jaxlogit_optax', 'L-BFGS-optax')]\n",
+    "combos = [('jaxlogit_scipy', \"L-BFGS-B-scipy\"), ('jaxlogit_scipy_b', \"BFGS-scipy\"), ('jaxlogit_jax', \"L-BFGS-jax\")]\n",
     "# no jax scipy batching, because it does not work.\n",
     "combos_batched = [('jaxlogit_scipy_batched', \"L-BFGS-scipy\"), ('jaxlogit_scipy_b_batched', \"BFGS-scipy\")]"
    ]
