change L-BFGS-B-scipy to L-BFGS-scipy

--- a/examples/graphs/comparison_graphs_memory.ipynb
+++ b/examples/graphs/comparison_graphs_memory.ipynb
@@ -140,7 +140,7 @@
    "source": [
     "df = pd.read_csv(pathlib.Path.cwd().parent / \"electricity_long.csv\") # get a clean version\n",
     "varnames = ['pf', 'cl', 'loc', 'wk', 'tod', 'seas']\n",
-    "n_draws = 1000\n",
+    "n_draws = 5000 # set amount of draws here\n",
     "\n",
     "randvars = {'pf': 'n', 'cl': 'n', 'loc': 'n', 'wk': 'n', 'tod': 'n', 'seas': 'n'}\n",
     "\n",
@@ -197,7 +197,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "combos = [('jaxlogit_scipy', \"L-BFGS-B-scipy\"), ('jaxlogit_scipy_b', \"BFGS-scipy\"), ('jaxlogit_jax', \"L-BFGS-jax\")]\n",
+    "combos = [('jaxlogit_scipy', \"L-BFGS-scipy\"), ('jaxlogit_scipy_b', \"BFGS-scipy\"), ('jaxlogit_jax', \"L-BFGS-jax\")]\n",
     "# no jax scipy batching, because it does not work.\n",
     "combos_batched = [('jaxlogit_scipy_batched', \"L-BFGS-scipy\"), ('jaxlogit_scipy_b_batched', \"BFGS-scipy\")]"
    ]
@@ -214,7 +214,7 @@
     "    model_jax = MixedLogit()\n",
     "    config = ConfigData(\n",
     "        panels=df['id'],\n",
-    "        n_draws=1000,\n",
+    "        n_draws=n_draws,\n",
     "        skip_std_errs=True,  # skip standard errors to speed up the example\n",
     "        batch_size=None,\n",
     "        optim_method=method,\n",
@@ -235,9 +235,9 @@
     "    model_jax = MixedLogit()\n",
     "    config = ConfigData(\n",
     "        panels=df['id'],\n",
-    "        n_draws=1000,\n",
+    "        n_draws=n_draws,\n",
     "        skip_std_errs=True,  # skip standard errors to speed up the example\n",
-    "        batch_size=None,\n",
+    "        batch_size=1077,\n",
     "        optim_method=method,\n",
     "    )\n",
     "\n",
@@ -253,7 +253,7 @@
    "outputs": [],
    "source": [
     "mem_usage_x = memory_usage((model_x.fit, (df[varnames], df['choice'], varnames, df['alt'], df['chid'], randvars), \n",
-    "                          {\"panels\": df['id'], \"n_draws\": 1000, \"skip_std_errs\": True, \"batch_size\": None, \"optim_method\": \"L-BFGS-B\"},), interval=5.0, multiprocess=True)\n",
+    "                          {\"panels\": df['id'], \"n_draws\": n_draws, \"skip_std_errs\": True, \"batch_size\": None, \"optim_method\": \"L-BFGS-B\"},), interval=5.0, multiprocess=True)\n",
     "rdf_fit.loc[len(rdf_fit)] = [\"xlogit\", mem_usage_x]"
    ]
   },
