--- a/examples/mixed_logit_comparison_example.ipynb
+++ b/examples/mixed_logit_comparison_example.ipynb
@@ -239,7 +239,7 @@
     "    n_draws=n_draws,\n",
     "    skip_std_errs=True,  # skip standard errors to speed up the example\n",
     "    batch_size=None,\n",
-    "    optim_method=\"L-BFGS-B-scipy\",\n",
+    "    optim_method=\"L-BFGS-scipy\",\n",
     ")\n",
     "model_jax_scipy.fit(\n",
     "    X=X_train,\n",
@@ -392,7 +392,7 @@
     "    n_draws=n_draws,\n",
     "    skip_std_errs=True,  # skip standard errors to speed up the example\n",
     "    batch_size=None,\n",
-    "    optim_method=\"L-BFGS-B-scipy\",\n",
+    "    optim_method=\"L-BFGS-scipy\",\n",
     ")\n",
     "config.init_coeff = init_coeff_scipy\n",
     "prob_j_scipy = model.predict(X_test, varnames, alts_test, ids_test, randvars, config)"
