--- a/examples/mixed_logit_correlated_example.ipynb
+++ b/examples/mixed_logit_correlated_example.ipynb
@@ -209,7 +209,7 @@
         "    n_draws=1500, \n",
         "    avail=(df['AV']),\n",
         "    panels=(df[\"ID\"]),\n",
-        "    optim_method=\"L-BFGS-B-scipy\",\n",
+        "    optim_method=\"L-BFGS-scipy\",\n",
         ")\n",
         "\n",
         "res = model.fit(\n",
